# kraken_read_parser

./: .gitignore  README.md  pyproject.toml
docs/: repo_structure_and_program_use.md  schemas.md  stage2_planning.md
kraken_read_parser/: __init__.py  cli.py  database.py  fastq.py  kraken.py  metadata.py  parser.py  report.py  schemas.py  validation.py
tests/: test_cli.py  test_database.py  test_fastq_validation.py  test_kraken_command.py  test_parser.py  test_report.py
