[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-read-parser"
version = "0.1.0"
description = "Stage 1 Kraken2 runner and paired-output parser for human genomic paired-end FASTQ products"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "kraken_read_parser contributors"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
kraken-read-parser = "kraken_read_parser.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
